<resources>
    <string name="app_name">FitTreat</string>
    <string name="database_name">fittreat</string>
    <string name="please_wait">Please Wait</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="errorEmail">Enter proper Email Address</string>
    <string name="errorPassword">Password cannot be empty</string>
    <string name="errorInternet">Please check your internet connection.</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot/Change Password</string>
    <string name="not_a_member_register">Not a member? Register</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="dob">Date of Birth</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="food_preferences">Select Food Preference</string>
    <string name="medical_condition">Select Medical Condition</string>
    <string name="dietPlan">Diet Plan</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="only_liquids">Only Liquids</string>
    <string name="utilities">Utilities</string>
    <string name="calories_requirement">Calories Requirement</string>
    <string name="otc_medicine">OTC Medicine</string>
    <string name="near_by_doctor">Doctors Near By</string>
    <string name="near_by_pharmacy">Pharmacies  Near By</string>
    <string name="aboutUs">About Us</string>
    <string name="references">References</string>
    <string name="otcMedicines">OTC Medicines</string>
    <string name="aboutUsText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="enter_symptoms">Search Symptoms</string>
    <string name="symptoms">Symptoms</string>
    <string name="my_profile">My Profile</string>
    <string name="exit">Press again to exit</string>
    <string name="inbox">Inbox</string>
    <string name="write_to_us">Write to Us</string>
    <string name="logout">Logout</string>
    <string name="your_current_bmi">Your Current BMI</string>
    <string name="target_weight">Target Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="submit">SUBMIT</string>
    <string name="calCalculator">Calorie Requirement Calculator</string>
    <string name="calorie">Calories per serving</string>
    <string name="first_name">First Name</string>
    <string name="logoutMSG">Are you sure to Logout?</string>
    <string name="alert">Alert</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="errorFName">Enter First Name</string>
    <string name="errorGender">Select Gender</string>
    <string name="errorDob">Select Date of Birth</string>
    <string name="errorHeight">Enter Height</string>
    <string name="errorWeight">Enter Weight</string>
    <string name="errorAge">Enter Age</string>
    <string name="errorFood">Select Food Preference</string>
    <string name="errorMedical">Select Medical Condition</string>
    <string name="time_period">Time Period</string>
    <string name="invalidHeight">Invalid Height Value</string>

    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="cm">cm</string>
    <string name="m">m</string>
    <string name="ft">ft</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="nonVegetarian">Non-Vegetarian</string>
    <string name="none">None</string>
    <string name="diabetes">Diabetes</string>
    <string name="thyroid">Thyroid</string>
    <string name="dailyActivities">Activity Level</string>
    <string name="sedentart">Sedentary</string>
    <string name="slightlyActive">Slightly Active</string>
    <string name="moderatelyActive">Moderately Active</string>
    <string name="veryActive">Very Active</string>
    <string name="extraActive">Extra Active</string>
    <string name="errorTarWeight">Enter Target Weight</string>
    <string name="errorTarTime">Enter Target Time</string>
    <string name="errorDailyActivity">Select Daily Activities</string>
    <string name="age">Age</string>
    <string name="message">Message</string>
    <string name="enter_message">Enter Message</string>
    <string name="serving">Serving</string>
    <string name="choose_file">Choose File</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="gallery">Gallery</string>
    <string name="ingredients">Ingredients</string>
    <string name="nutrition_info">Nutrition Info</string>
    <string name="directions">Directions</string>
    <string name="your_results_are">Your Results are:</string>
    <string name="close">Close</string>
    <string name="snack">Snack</string>
    <string name="juice">Juice</string>
    <string name="activity_levels">Activity Levels</string>

</resources>
