<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/half_round"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_180sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_140sdp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/logo"/>

            <code.view.CustomTextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:layout_below="@+id/imageView"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/blackNew"
                app:customFont="centurygothic.otf"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLoginBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlLogo"
        android:visibility="gone">

        <code.view.CustomTextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/blackNew"
            app:customFont="OpenSans-Regular.ttf"
            android:layout_marginTop="@dimen/_30sdp"/>

        <code.view.CustomEditText
            android:id="@+id/etEmail"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center_vertical"
            android:hint="@string/email_id"
            android:textSize="@dimen/_13sdp"
            android:inputType="textEmailAddress"
            android:textColor="@color/blackNew"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:layout_below="@+id/tvWelcome"
            android:layout_marginTop="@dimen/_10sdp"
            app:customFont="OpenSans-Regular.ttf"
            android:singleLine="true"
            android:background="@drawable/rectangle_edit_box"/>

        <code.view.CustomEditText
            android:id="@+id/etPassword"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/blackNew"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:layout_below="@+id/etEmail"
            android:layout_marginTop="@dimen/_10sdp"
            app:customFont="OpenSans-Regular.ttf"
            android:singleLine="true"
            android:background="@drawable/rectangle_edit_box"/>

        <code.view.CustomTextView
            android:id="@+id/tvForgot"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:text="@string/forgot_password"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:textColor="@color/blackNew"
            android:layout_below="@+id/etPassword"
            app:customFont="OpenSans-Regular.ttf"/>


        <code.view.CustomTextView
            android:id="@+id/tvLogin"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/login"
            android:layout_below="@+id/tvForgot"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_20sdp"
            app:customFont="OpenSans-Regular.ttf"
            android:visibility="visible"
            android:background="@drawable/rectangle_blue_button"/>

        <code.view.CustomTextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/not_a_member_register"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/blackNew"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_5sdp"
            app:customFont="OpenSans-Regular.ttf"/>

    </RelativeLayout>

</RelativeLayout>
