<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:layout_gravity="center"
            android:background="@color/white">

            <TextView
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/choose_file"
                android:id="@+id/textView79"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                android:textColor="@color/blueDark"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/camera"
                android:id="@+id/textView80"
                android:layout_below="@+id/textView79"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rectangle_blue_gradient_round"/>

            <TextView
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/gallery"
                android:id="@+id/textView81"
                android:layout_below="@+id/textView80"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rectangle_blue_gradient_round"/>

            <TextView
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/cancel"
                android:id="@+id/textView83"
                android:layout_below="@+id/textView81"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/rectangle_blue_gradient_round"/>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
