<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlLogo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/half_round"
                android:visibility="invisible">

                <RelativeLayout
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_180sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="@dimen/_140sdp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/logo"/>

                    <code.view.CustomTextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:layout_below="@+id/imageView"
                        android:textSize="@dimen/_20sdp"
                        android:textColor="@color/blackNew"
                        app:customFont="centurygothic.otf"/>

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llRegisterBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlLogo"
                android:visibility="gone"
                android:orientation="vertical"
                android:gravity="center">

                <code.view.CustomTextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register_yourself"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/blackNew"
                    app:customFont="OpenSans-Regular.ttf"
                    android:layout_marginTop="@dimen/_15sdp"/>

                <code.view.CustomEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center_vertical"
                    android:hint="@string/first_name"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/blackNew"
                    android:paddingLeft="@dimen/_10sdp"
                    android:inputType="textCapWords"
                    android:paddingRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:customFont="OpenSans-Regular.ttf"
                    android:singleLine="true"
                    android:background="@drawable/rectangle_edit_box"/>

                <code.view.CustomEditText
                    android:id="@+id/etLastName"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center_vertical"
                    android:hint="@string/last_name"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/blackNew"
                    android:paddingLeft="@dimen/_10sdp"
                    android:inputType="textCapWords"
                    android:paddingRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:customFont="OpenSans-Regular.ttf"
                    android:singleLine="true"
                    android:background="@drawable/rectangle_edit_box"/>

                <code.view.CustomEditText
                    android:id="@+id/etEmail"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center_vertical"
                    android:hint="@string/email_id"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/blackNew"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:customFont="OpenSans-Regular.ttf"
                    android:singleLine="true"
                    android:background="@drawable/rectangle_edit_box"/>

                <code.view.CustomEditText
                    android:id="@+id/etPassword"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/blackNew"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:customFont="OpenSans-Regular.ttf"
                    android:singleLine="true"
                    android:background="@drawable/rectangle_edit_box"/>

                <RelativeLayout
                    android:id="@+id/rlGender"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible">

                    <code.view.CustomTextView
                        android:id="@+id/tvGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/gender"
                        android:textSize="@dimen/_13sdp"
                        android:textColor="@color/blackNew"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_centerVertical="true"
                        app:customFont="OpenSans-Regular.ttf"/>

                    <code.view.CustomRadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/male"
                        android:textSize="@dimen/_13sdp"
                        android:textColor="@color/blackNew"
                        app:customFont="OpenSans-Regular.ttf"
                        android:layout_toRightOf="@+id/tvGender"
                        android:layout_marginLeft="@dimen/_20sdp"/>

                    <code.view.CustomRadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/female"
                        android:textSize="@dimen/_13sdp"
                        android:textColor="@color/blackNew"
                        app:customFont="OpenSans-Regular.ttf"
                        android:layout_toRightOf="@+id/rbMale"
                        android:layout_marginLeft="@dimen/_20sdp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlDob"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible"
                    android:background="@drawable/rectangle_edit_box">

                    <code.view.CustomEditText
                        android:id="@+id/etDob"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:hint="@string/dob"
                        android:textSize="@dimen/_13sdp"
                        android:textColor="@color/blackNew"
                        android:inputType="number"
                        android:enabled="false"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        app:customFont="OpenSans-Regular.ttf"
                        android:singleLine="true"
                        android:background="@null"/>

                    <ImageView
                        android:id="@+id/ivDob"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        app:srcCompat="@drawable/ic_calendar"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlHeight"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible"
                    android:background="@drawable/rectangle_edit_box">

                    <code.view.CustomEditText
                        android:id="@+id/etHeight"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="center_vertical"
                        android:hint="@string/height"
                        android:textSize="@dimen/_13sdp"
                        android:textColor="@color/blackNew"
                        android:inputType="numberDecimal"
                        android:layout_centerHorizontal="true"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        app:customFont="OpenSans-Regular.ttf"
                        android:singleLine="true"
                        android:maxLength="4"
                        android:background="@null"/>

                    <Spinner
                        android:id="@+id/spinnerHeight"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:background="@drawable/drop_down_shape"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:popupBackground="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlWeight"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible"
                    android:background="@drawable/rectangle_edit_box">

                    <code.view.CustomEditText
                        android:id="@+id/etWeight"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="center_vertical"
                        android:hint="@string/weight"
                        android:textSize="@dimen/_13sdp"
                        android:textColor="@color/blackNew"
                        android:inputType="numberDecimal"
                        android:layout_centerHorizontal="true"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        app:customFont="OpenSans-Regular.ttf"
                        android:singleLine="true"
                        android:background="@null"/>

                    <Spinner
                        android:id="@+id/spinnerWeight"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:background="@drawable/drop_down_shape"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:popupBackground="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlFoodPre"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible"
                    android:background="@drawable/rectangle_edit_box">

                    <Spinner
                        android:id="@+id/spinnerFood"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@drawable/drop_down_shape"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:popupBackground="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlMedCon"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible"
                    android:background="@drawable/rectangle_edit_box">

                    <Spinner
                        android:id="@+id/spinnerMedical"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@drawable/drop_down_shape"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:popupBackground="@color/white" />

                </RelativeLayout>

                <code.view.CustomTextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:customFont="OpenSans-Regular.ttf"
                    android:visibility="visible"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/rectangle_blue_button"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
